--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+ @import url('https://fonts.googleapis.com/css?family=Zilla+Slab');
 body {
 	margin: 20px;
+    font-family: 'Zilla Slab', serif;
 }
 
 header {
