Changing the font to Zilla Slab

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
 	margin: 20px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Zilla Slab', serif;
 }
 
 header {
     text-align: center;
     font-style: oblique;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Zilla Slab', serif;
     font-size: 23px;
-    color: #0095DD;
+    color: #6e008b;
 }
 
 #headerContent {
