--- a/style.css
+++ b/style.css
@@ -9,27 +9,38 @@ header {
     text-align: center;
     background-position: 90% 100%;
     background-repeat: no-repeat;
+    height: 300px;
+    background-color: #031643;
     
 }
 
 .head_main{
-	background-color: #0996f8;
-	height: 250px;
+    color: white;
+    margin-top: -20px;
+    width: auto;
+
 }
 
+#headtext{
+    margin-top: -30px;
+
+
+}
 #logo {
 	height: 100px;
     padding: 15px;
     width: 200px;
+    position: relative;
+
 }
 
 #logo img {
 	height: 100px;
-    float: left;
-    margin-left: 100px;
+    display: flex;
+    position: relative;
 }
 #mozhead {
-	width: 200px;
+	width: 140px;
     padding: 20px;
     margin-left: 200px;
     margin-top: -150px;
@@ -41,21 +52,16 @@ header {
 }
 
 
-#headtext{
-	height: 120px;
-    position: absolute;
-    margin-left: 250px;
-        margin-top: -60px;
-}
 h1{
-	font-family: 'Concert One', cursive;
+	font-family: 'Zilla Slab', serif;
     font-size: 50px;
-    margin-top: -40px;
+    margin-top: -22px;
 }
 
-p{
-	margin-top: 30px;
+h2 p{
+    font-family: 'Zilla Slab', serif;
 }
+
 #mentorsMap {
 	height: calc(100vh - 40px);
 }
@@ -116,4 +122,16 @@ p{
     .leaflet-popup-content {
         min-width: 350px;
     }
+     #headtext {
+        width: fit-content;
+  }
+}
+
+@media (min-width: 740px) {
+  #headtext {
+       
+        width: fit-content;
+        margin-top: 30px;
+  }
+
 }
